added some designVUE-specific help menu items
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11032 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources_de.properties
+++ b/VUE2/src/tufts/vue/VueResources_de.properties
@@ -302,7 +302,7 @@ pathways.empty.label = Der Pfad ist leer
 actions.zoomActual.label = 100% Anzeige
 dialog.title.saveaspdf = PDF speichern als
 helpMenu.feedback.label = Feedback
-helpMenu.userGuide.label = Nutzerhandbuch
+helpMenu.userGuide.label = VUE-Nutzerhandbuch
 helpMenu.vueWebsite.label = Forum
 helpMenu.releaseNotes.label = Versionsinfo
 helpMenu.mymaps.label = Meine Maps
