--- a/VUE2/src/tufts/vue/VueResources_es_ES.properties
+++ b/VUE2/src/tufts/vue/VueResources_es_ES.properties
@@ -337,7 +337,7 @@ dialog.title.saveaspdf=Guardar PDF como
 
 #help menu
 helpMenu.feedback.label=Retroalimentaci\u00f3n
-helpMenu.userGuide.label=Gu\u00eda de Usuarios
+helpMenu.userGuide.label=Gu\u00eda de Usuarios VUE
 helpMenu.vueWebsite.label=Foro
 helpMenu.releaseNotes.label=Notas de Versi\u00f3n
 helpMenu.mymaps.label=Mis Mapas
