--- a/VUE2/src/tufts/vue/VueResources_fr_FR.properties
+++ b/VUE2/src/tufts/vue/VueResources_fr_FR.properties
@@ -335,7 +335,7 @@ dialog.title.saveaspdf=Sauvegarder PDF sous
 
 #help menu
 helpMenu.feedback.label=Feedback
-helpMenu.userGuide.label=Guide Utilisateur
+helpMenu.userGuide.label=Guide Utilisateur VUE
 helpMenu.vueWebsite.label=Forum
 helpMenu.releaseNotes.label=Lib\u00e9rer Notes
 helpMenu.mymaps.label=Mes Cartes
