--- a/VUE2/src/tufts/vue/VueResources_it.properties
+++ b/VUE2/src/tufts/vue/VueResources_it.properties
@@ -389,7 +389,7 @@ dialog.save.title=Salva
 
 #help menu
 helpMenu.feedback.label=Feedback
-helpMenu.userGuide.label=Guida Utente
+helpMenu.userGuide.label=Guida Utente VUE
 helpMenu.vueWebsite.label=Forum
 helpMenu.releaseNotes.label=Note di Rilascio
 helpMenu.mymaps.label=Mie Mappe
