--- a/VUE2/src/tufts/vue/VueResources_pt_BR.properties
+++ b/VUE2/src/tufts/vue/VueResources_pt_BR.properties
@@ -394,7 +394,7 @@ dialog.save.title=Salvar
 
 #help menu 
 helpMenu.feedback.label=Feedback
-helpMenu.userGuide.label=Guia do Usu\u00e1rio
+helpMenu.userGuide.label=Guia do Usu\u00e1rio VUE
 helpMenu.vueWebsite.label=F\u00f3rum
 helpMenu.releaseNotes.label=Notas de Vers\u00e3o
 helpMenu.mymaps.label=Meus Mapas
