--- a/VUE2/src/tufts/vue/VueResources_pt_PT.properties
+++ b/VUE2/src/tufts/vue/VueResources_pt_PT.properties
@@ -338,7 +338,7 @@ dialog.title.saveaspdf=Guardar PDF como
 
 #help menu
 helpMenu.feedback.label=Feedback
-helpMenu.userGuide.label=Guia do Utilizador
+helpMenu.userGuide.label=Guia do Utilizador VUE
 helpMenu.vueWebsite.label=F\u00f3rum
 helpMenu.releaseNotes.label=Notas de Vers\u00e3o
 helpMenu.mymaps.label=Os Meus Mapas
