--- a/VUE2/src/tufts/vue/VueResources_ro.properties
+++ b/VUE2/src/tufts/vue/VueResources_ro.properties
@@ -397,7 +397,7 @@ dialog.save.title=Salveaz\u0103
 
 #help menu
 helpMenu.feedback.label=Feedback
-helpMenu.userGuide.label=Ghidul utilizatorului
+helpMenu.userGuide.label=Ghidul utilizatorului VUE
 helpMenu.vueWebsite.label=Forum
 helpMenu.releaseNotes.label=Note de versiune
 helpMenu.mymaps.label=H\u0103r\u021bile mele
