last before beta release
git-svn-id: https://tuftsvue.svn.sourceforge.net/svnroot/tuftsvue/branches/helenoliver@11033 d66e5487-c4fa-4dda-8c8e-ca23240363c0

--- a/VUE2/src/tufts/vue/VueResources_de.properties
+++ b/VUE2/src/tufts/vue/VueResources_de.properties
@@ -171,6 +171,7 @@ menu.edit.reselect = Wieder ausw\u00E4hlen
 menu.edit.preferences = Einstellungen
 menu.edit.duplicate = Duplizieren
 menu.content.addnode = Knoten hinzuf\u00FCgen
+menu.content.addIBISnode=IBISKnoten hinzuf\u00FCgen
 menu.content.addtext = Text hinzuf\u00FCgen
 menu.view.zoomout = Herauszoomen
 menu.view.zoomin = Hineinzoomen
@@ -301,9 +302,11 @@ presentationNotes.invalidPathway.title = Aktiver Pfad ist ung\u00FCltig
 pathways.empty.label = Der Pfad ist leer
 actions.zoomActual.label = 100% Anzeige
 dialog.title.saveaspdf = PDF speichern als
-helpMenu.feedback.label = Feedback
+helpMenu.feedback.label = VUE Feedback
 helpMenu.userGuide.label = VUE-Nutzerhandbuch
-helpMenu.vueWebsite.label = Forum
+helpMenu.designVUEUserGuide.label=designVUE-Nutzerhandbuch
+helpMenu.vueWebsite.label = VUE-Forum
+helpMenu.designVUEForum.label=designVUE-Forum
 helpMenu.releaseNotes.label = Versionsinfo
 helpMenu.mymaps.label = Meine Maps
 repositoryexception.operationfailed = Die Suche konnte nicht abgeschlossen werden. Der Service oder die Verbindung zum Service war nicht erreichbar. 
@@ -521,6 +524,7 @@ button.resetstyle.label = Stil zur\u00FCcksetzen
 button.resetallstyle.label = Alle Folienstile zur\u00FCcksetzen
 splashscreen.title = VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby = Entwickelt von Academic Technology
+splashscreen.developedby.additions=Entwickelt von Design Engineering Group
 jbutton.nodetoslide.label = vom Knoten zur Folie
 jbutton.slidetonode.label = von Folie zum Knoten
 jbutton.bothways.label = beide Richtungen synchronisieren
@@ -1215,6 +1219,9 @@ dockWindow.contentPanel.sync.noChangedRecords=No records have changed since they
 dockWindow.contentPanel.sync.oneChangedRecord=1 record has changed since it was added to the map.
 dockWindow.contentPanel.sync.manyChangedRecords=%d records have changed since they were added to the map.
 dockWindow.contentPanel.sync.updateMap=Update Map
+
+#HO 01/11/2011
+menu.ibisimage=IBIS-Bild
 
 ############################################
 # New properties for VUE 3.0 final release #
