--- a/VUE2/src/tufts/vue/VueResources_es_ES.properties
+++ b/VUE2/src/tufts/vue/VueResources_es_ES.properties
@@ -33,6 +33,9 @@ mapViewer.componentMenu.format.label=Formato
 mapViewer.componentMenu.arrangeMenu.label=Ordenar
 returnToMap.label=Volver al Mapa
 
+#HO 01/11/2011
+menu.ibisimage=Imagen IBIS
+
 # Map Inspector WIndow Title
 mapInspectorTitle=Informaci\u00f3n del Mapa
 
@@ -204,6 +207,7 @@ menu.edit.reselect=Reseleccionar
 menu.edit.preferences=Preferencias 
 menu.edit.duplicate=Duplicar
 menu.content.addnode=Agregar Nodo
+menu.content.addIBISnode=Agregar Nodo IBIS
 menu.content.addtext=Agregar Texto
 menu.view.zoomout=M\u00e1s Zoom
 menu.view.zoomin=Menos Zoom
@@ -336,9 +340,12 @@ actions.zoomActual.label=Ver al 100%
 dialog.title.saveaspdf=Guardar PDF como
 
 #help menu
-helpMenu.feedback.label=Retroalimentaci\u00f3n
+helpMenu.feedback.label=Retroalimentaci\u00f3n VUE
+helpMenu.designVUEfeedback.label=Retroalimentaci\u00f3n designVUE
 helpMenu.userGuide.label=Gu\u00eda de Usuarios VUE
-helpMenu.vueWebsite.label=Foro
+helpMenu.designVUEUserGuide.label=Gu\u00eda de Usuarios designVUE
+helpMenu.vueWebsite.label=Foro VUE
+helpMenu.designVUEForum.label=Foro designVUE
 helpMenu.releaseNotes.label=Notas de Versi\u00f3n
 helpMenu.mymaps.label=Mis Mapas
 
