--- a/VUE2/src/tufts/vue/VueResources_fr_FR.properties
+++ b/VUE2/src/tufts/vue/VueResources_fr_FR.properties
@@ -33,6 +33,9 @@ mapViewer.componentMenu.format.label=Palette de Format
 mapViewer.componentMenu.arrangeMenu.label=Organiser
 returnToMap.label=Retour \u00e0 la carte
 
+#HO 01/11/2011
+menu.ibisimage=Image IBIS
+
 # Map Inspector WIndow Title
 mapInspectorTitle=Carte Info
 
@@ -202,6 +205,7 @@ menu.edit.reselect=Res\u00e9lectionner
 menu.edit.preferences=Pr\u00e9f\u00e9rences 
 menu.edit.duplicate=Dupliquer
 menu.content.addnode=Ajouter Noeuds
+menu.content.addIBISnode=Ajouter Noeuds IBIS
 menu.content.addtext=Ajouter Texte
 menu.view.zoomout=Diminuer le Zoom (-)
 menu.view.zoomin=Augmenter le Zoom (+)
@@ -334,9 +338,12 @@ actions.zoomActual.label=Vue 100%
 dialog.title.saveaspdf=Sauvegarder PDF sous
 
 #help menu
-helpMenu.feedback.label=Feedback
+helpMenu.feedback.label=Feedback VUE
+helpMenu.designVUEfeedback.label=Feedback designVUE
 helpMenu.userGuide.label=Guide Utilisateur VUE
-helpMenu.vueWebsite.label=Forum
+helpMenu.designVUEUserGuide.label=Guide Utilisateur designVUE
+helpMenu.vueWebsite.label=Forum VUE
+helpMenu.designVUEForum.label=Forum designVUE
 helpMenu.releaseNotes.label=Lib\u00e9rer Notes
 helpMenu.mymaps.label=Mes Cartes
 
@@ -636,6 +643,7 @@ button.resetallstyle.label=Reinitialiser tous les Styles Diapo
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=D\u00e9velopp\u00e9 par Academic Technology
+splashscreen.developedby.additions=D\u00e9velopp\u00e9 par Design Engineering Group
 
 #SyncDialog
 jbutton.nodetoslide.label=de Noeud vers Diapo
