--- a/VUE2/src/tufts/vue/VueResources_hu_HU.properties
+++ b/VUE2/src/tufts/vue/VueResources_hu_HU.properties
@@ -650,6 +650,7 @@ button.resetallstyle.label=Minden dia st\u00edlus\u00e1nak vissza\u00e1ll\u00edt
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Academic Technology fejleszt\u00e9se
+splashscreen.developedby.additions=Design Engineering Group fejleszt\u00e9se
 
 #SyncDialog
 jbutton.nodetoslide.label=Csom\u00f3pontb\u00f3l di\u00e1ba
