--- a/VUE2/src/tufts/vue/VueResources_it.properties
+++ b/VUE2/src/tufts/vue/VueResources_it.properties
@@ -35,6 +35,9 @@ mapViewer.componentMenu.arrangeMenu.label=Ordinamento
 mapViewer.componentMenu.mapMenu=Menu Mappa
 returnToMap.label=Ritorna alla Mappa
 
+#HO 01/11/2011
+menu.ibisimage=Immagine IBIS
+
 # Map Inspector WIndow Title
 mapInspectorTitle=Informazioni Mappa
 
@@ -230,6 +233,7 @@ menu.edit.shrinkselection=Riduci Selezione
 menu.edit.preferences=Preferenze
 menu.edit.duplicate=Duplica
 menu.content.addnode=Aggiungi Nodo
+menu.content.addIBISnode=Aggiungi Nodo IBIS
 menu.content.addtext=Aggiungi Testo
 menu.view.zoomout=Zoom indietro
 menu.view.zoomin=Zoom avanti
@@ -388,9 +392,12 @@ dialog.saveaspdf.title=Salva come PDF
 dialog.save.title=Salva
 
 #help menu
-helpMenu.feedback.label=Feedback
+helpMenu.feedback.label=Feedback VUE
+helpMenu.designVUEfeedback.label=Feedback designVUE
 helpMenu.userGuide.label=Guida Utente VUE
-helpMenu.vueWebsite.label=Forum
+helpMenu.designVUEUserGuide.label=Guida Utente designVUE
+helpMenu.vueWebsite.label=Forum VUE
+helpMenu.designVUEForum.label=Forum designVUE
 helpMenu.releaseNotes.label=Note di Rilascio
 helpMenu.mymaps.label=Mie Mappe
 
@@ -711,6 +718,7 @@ button.resetallstyle.label=Azzera Tutti gli Stili Diapositiva
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Sviluppato dalla Academic Technology
+splashscreen.developedby.additions=Sviluppato dal Design Engineering Group
 
 #SyncDialog
 jbutton.nodetoslide.label=dal nodo alla diapositiva
