--- a/VUE2/src/tufts/vue/VueResources_pt_BR.properties
+++ b/VUE2/src/tufts/vue/VueResources_pt_BR.properties
@@ -36,6 +36,9 @@ mapViewer.componentMenu.arrangeMenu.label=Organizar
 mapViewer.componentMenu.mapMenu=Menu do Mapa
 returnToMap.label=Retornar ao Mapa
 
+#HO 01/11/2011
+menu.ibisimage=Imagem IBIS
+
 # Map Inspector WIndow Title 
 mapInspectorTitle=Informa\u00e7\u00f5es do Mapa
 
@@ -231,6 +234,7 @@ menu.edit.shrinkselection=Encolher a Sele\u00e7\u00e3o
 menu.edit.preferences=Prefer\u00eancias 
 menu.edit.duplicate=Duplicar
 menu.content.addnode=Adicionar N\u00f3
+menu.content.addIBISnode=Adicionar N\u00f3 IBIS
 menu.content.addtext=Adicionar Texto
 menu.view.zoomout=Ampliar
 menu.view.zoomin=Reduzir
@@ -393,9 +397,12 @@ dialog.saveaspdf.title=Salvar como PDF
 dialog.save.title=Salvar
 
 #help menu 
-helpMenu.feedback.label=Feedback
+helpMenu.feedback.label=Feedback VUE
+helpMenu.designVUEfeedback.label=Feedback designVUE
 helpMenu.userGuide.label=Guia do Usu\u00e1rio VUE
-helpMenu.vueWebsite.label=F\u00f3rum
+helpMenu.designVUEUserGuide.label=Guia do Usu\u00e1rio designVUE
+helpMenu.vueWebsite.label=F\u00f3rum VUE
+helpMenu.designVUEForum.label=F\u00f3rum designVUE
 helpMenu.releaseNotes.label=Notas de Vers\u00e3o
 helpMenu.mymaps.label=Meus Mapas
 
@@ -719,6 +726,7 @@ button.resetallstyle.label=Reiniciar Todos Os Estilos de Slides
 #SplashScreen 
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Desenvolvido por Academic Technology
+splashscreen.developedby.additions=Desenvolvido por Design Engineering Group
 
 #SyncDialog 
 jbutton.nodetoslide.label=do n\u00f3 para o slide
