--- a/VUE2/src/tufts/vue/VueResources_ro.properties
+++ b/VUE2/src/tufts/vue/VueResources_ro.properties
@@ -37,6 +37,9 @@ mapViewer.componentMenu.arrangeMenu.label=Aranjeaz\u0103
 mapViewer.componentMenu.mapMenu=Meniul h\u0103r\u021bii
 returnToMap.label=\u00cenapoi la hart\u0103
 
+#HO 01/11/2011
+menu.ibisimage=Imagine IBIS
+
 # Map Inspector WIndow Title
 mapInspectorTitle=Informa\u021bie despre hart\u0103
 
@@ -234,6 +237,7 @@ menu.edit.shrinkselection=Mic\u0219oreaz\u0103 selec\u021bia
 menu.edit.preferences=Preferin\u021be
 menu.edit.duplicate=Duplic\u0103
 menu.content.addnode=Adaug\u0103 nod
+menu.content.addIBISnode=Adaug\u0103 nod IBIS
 menu.content.addtext=Adaug\u0103 text
 menu.view.zoomout=Mic\u0219oreaz\u0103
 menu.view.zoomin=M\u0103re\u0219te
@@ -396,9 +400,12 @@ dialog.saveaspdf.title=Salveaz\u0103 ca PDF
 dialog.save.title=Salveaz\u0103
 
 #help menu
-helpMenu.feedback.label=Feedback
+helpMenu.feedback.label=Feedback VUE
+helpMenu.designVUEfeedback.label=Feedback designVUE
 helpMenu.userGuide.label=Ghidul utilizatorului VUE
-helpMenu.vueWebsite.label=Forum
+helpMenu.designVUEUserGuide.label=Ghidul utilizatorului designVUE
+helpMenu.vueWebsite.label=Forum VUE
+helpMenu.designVUEForum.label=Forum designVUE
 helpMenu.releaseNotes.label=Note de versiune
 helpMenu.mymaps.label=H\u0103r\u021bile mele
 
@@ -720,6 +727,7 @@ button.resetallstyle.label=Reseteaz\u0103 toate stilurile slide-urilor
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=Dezvoltat de Academic Technology
+splashscreen.developedby.additions=Dezvoltat de Design Engineering Group
 
 #SyncDialog
 jbutton.nodetoslide.label=de la nod la slide
