--- a/VUE2/src/tufts/vue/VueResources_sk.properties
+++ b/VUE2/src/tufts/vue/VueResources_sk.properties
@@ -390,7 +390,8 @@ dialog.save.title=Ulo\u017ei\u0165
 #help menu
 helpMenu.feedback.label=Sp\u00e4tn\u00e1 v\u00e4zba
 helpMenu.userGuide.label=Pr\u00edru\u010dka u\u017e\u00edvate\u013ea
-helpMenu.vueWebsite.label=F\u00f3rum
+helpMenu.vueWebsite.label=VUE F\u00f3rum
+helpMenu.designVUEForum.label=designVUE F\u00f3rum
 helpMenu.releaseNotes.label=Pozn\u00e1mky k vydaniu
 helpMenu.mymaps.label=Moje mapy
 
