--- a/VUE2/src/tufts/vue/VueResources_zh.properties
+++ b/VUE2/src/tufts/vue/VueResources_zh.properties
@@ -636,6 +636,7 @@ button.resetallstyle.label=\u91cd\u7f6e\u6240\u6709\u5e7b\u71c8\u7247\u6a23\u5f0
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby= \u7531 Academic Technology \u5efa\u7f6e 
+splashscreen.developedby.additions= \u7531 Design Engineering Group \u5efa\u7f6e 
 
 #SyncDialog
 jbutton.nodetoslide.label=\u5f9e\u7bc0\u9ede\u81f3\u5e7b\u71c8\u7247
