--- a/VUE2/src/tufts/vue/VueResources_pt_PT.properties
+++ b/VUE2/src/tufts/vue/VueResources_pt_PT.properties
@@ -33,6 +33,9 @@ mapViewer.componentMenu.format.label=Paleta de Formata\u00e7\u00e3o
 mapViewer.componentMenu.arrangeMenu.label=Ordenar
 returnToMap.label=Voltar ao Mapa
 
+#HO 01/11/2011
+menu.ibisimage=Imagem IBIS
+
 # Map Inspector Window Title
 mapInspectorTitle=Informa\u00e7\u00e3o do Mapa
 
@@ -205,6 +208,7 @@ menu.edit.reselect=Voltar a Seleccionar
 menu.edit.preferences=Prefer\u00eancias
 menu.edit.duplicate=Duplicar
 menu.content.addnode=Adicionar N\u00f3dulo
+menu.content.addIBISnode=Adicionar N\u00f3dulo IBIS
 menu.content.addtext=Adicionar Texto
 menu.view.zoomout=Afastar
 menu.view.zoomin=Aproximar
@@ -337,9 +341,12 @@ actions.zoomActual.label=Ver a 100%
 dialog.title.saveaspdf=Guardar PDF como
 
 #help menu
-helpMenu.feedback.label=Feedback
+helpMenu.feedback.label=Feedback VUE
+helpMenu.designVUEfeedback.label=Feedback designVUE
 helpMenu.userGuide.label=Guia do Utilizador VUE
-helpMenu.vueWebsite.label=F\u00f3rum
+helpMenu.designVUEUserGuide.label=Guia do Utilizador designVUE
+helpMenu.vueWebsite.label=F\u00f3rum VUE
+helpMenu.designVUEForum.label=F\u00f3rum designVUE
 helpMenu.releaseNotes.label=Notas de Vers\u00e3o
 helpMenu.mymaps.label=Os Meus Mapas
 
