--- a/VUE2/src/tufts/vue/VueResources_ru_RU.properties
+++ b/VUE2/src/tufts/vue/VueResources_ru_RU.properties
@@ -641,7 +641,7 @@ button.resetallstyle.label=\u041e\u0442\u043c\u0435\u043d\u0438\u0442\u044c \u04
 #SplashScreen
 splashscreen.title=VISUAL UNDERSTANDING ENVIRONMENT
 splashscreen.developedby=\u0420\u0430\u0437\u0440\u0430\u0431\u043e\u0442\u0430\u043d\u043e \u0432 Academic Technology
-
+splashscreen.developedby.additions=\u0420\u0430\u0437\u0440\u0430\u0431\u043e\u0442\u0430\u043d\u043e \u0432 Design Engineering Group
 #SyncDialog
 jbutton.nodetoslide.label=\u043e\u0442 \u0443\u0437\u043b\u0430 \u043a \u0441\u043b\u0430\u0439\u0434\u0443
 jbutton.slidetonode.label=\u043e\u0442 \u0441\u043b\u0430\u0439\u0434\u0430 \u043a \u0443\u0437\u043b\u0443
